--- a/index.html
+++ b/index.html
@@ -133,8 +133,25 @@
       <div class="button"><button class="btn-primay">Download CV</button></div>
     </section>
   </main>
-  <footer>
-
+  <footer class="secondery-bg">
+   <div class="footer-column"> 
+    <h3 class="section-title">let's connect</h3>
+    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+    <div>
+      <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="insta"></a>
+      <a href="https://x.com/i/flow/login"><img src="images/icons/twitter.png" alt="twitter"></a>
+    </div>
+   </div>
+   <div class="footer-column">
+    <h3 class="section-title">Let's Massage me</h3>
+    <form action="">
+      <input placeholder="Your name" type="text">
+      <input placeholder="Your email" type="email" name="" id="">
+      <textarea name="" id="" cols ="30" rows="20" placeholder="Masssage"></textarea>
+      <input class="btn-primay" type="submit" value="submit">
+    </form>
+   </div>
   </footer>
 </body>
 </html>
