--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
     <h3 class="section-title">let's connect</h3>
     <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
     <div>
-      <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook"></a>
-      <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="insta"></a>
-      <a href="https://x.com/i/flow/login"><img src="images/icons/twitter.png" alt="twitter"></a>
+      <a href="https://www.facebook.com/"target="blank"><img src="images/icons/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/"target="blank"><img src="images/icons/insta.png" alt="insta"></a>
+      <a href="https://x.com/i/flow/login"target="blank"><img src="images/icons/twitter.png" alt="twitter"></a>
     </div>
    </div>
    <div class="footer-column">
